[tool.poetry]
name = "etfdataserver"
version = "0.1.0"
description = ""
authors = ["徐焱挺 <xuyanting@lidig.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
click = "^8.0.2"
pytest = "^6.2.5"
coverage = "^6.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
